--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "generar-reporte":"allure generate allure-results -o allure-report --clean",
+    "abrir-reporte":"allure open",
+    "ejecutar-pruebas":"cypress run --headed --env allure=true",
+    "limpiar-reporte":"rimraf ./allure-report && rimraf ./allure-results",
+    "test":"npm run limpiar-reporte && npm run ejecutar-pruebas && npm run generar-reporte && npm run abrir-reporte"
+
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "cypress": "^12.13.0"
+  },
+  "dependencies": {
+    "@shelex/cypress-allure-plugin": "^2.40.2",
+    "allure-commandline": "^2.29.0"
   }
 }
