--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "generar-reporte": "allure generate allure-results -o allure-report --clean",
     "abrir-reporte": "allure open",
-    "ejecutar-pruebas": "cypress run --headed --env allure=true --spec \"cypress/e2e/tests/autenticacion.cy.js\"",
+    "ejecutar-pruebas": "cypress run --env allure=true --spec \"cypress/e2e/tests/autenticacion.cy.js\"",
     "limpiar-reporte": "rimraf ./allure-report && rimraf ./allure-results",
     "test": "npm run limpiar-reporte && npm run ejecutar-pruebas & npm run generar-reporte && npm run abrir-reporte",
     "cy:parallel" : "npm run limpiar-reporte && cypress-parallel -s ejecutar-pruebas -t 2 -d ./cypress/e2e/tests & npm run generar-reporte"
